Fix: Add Missing Padding to header logo

--- a/src/containers/Header/Header.pcss
+++ b/src/containers/Header/Header.pcss
@@ -8,6 +8,7 @@
     height: 100%;
     cursor: pointer;
     display: flex;
+    padding-right: 20px;
 
     &-img{
       height: 100%;
